# rusty-biscuit

./: .gitignore  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  c.md  info.json  just.md  justfile  release-plz.toml  t2.md  t3.md  test.html  test.md
ai-pipeline/lib/: Cargo.toml
ai-pipeline/lib/src/: lib.rs
api-macros/: Cargo.toml
api-macros/src/: codegen.rs  derive_api.rs  endpoints.rs  lib.rs  parse.rs
api-macros/tests/: ui.rs
biscuit/: Cargo.toml  README.md
biscuit-hash/: Cargo.toml  README.md  just.md  justfile
biscuit-hash/cli/: Cargo.toml
biscuit-hash/cli/src/: main.rs
biscuit-hash/cli/tests/: cli_tests.rs
biscuit-hash/lib/src/: xx.rs
biscuit-hash/src/: argon.rs  blake.rs  lib.rs
biscuit-speaks/: Cargo.toml  README.md  justfile
biscuit-speaks/docs/: multi-model-providers.md  single-model-providers.md
biscuit-speaks/examples/: list_voices.rs
biscuit-speaks/src/: audio_cache.rs  cache.rs  detection.rs  errors.rs  gender_inference.rs  lib.rs  old.rs  playa_bridge.rs  playback.rs  speak.rs  traits.rs  types.rs
biscuit-speaks/src/eleven_labs/: types.rs
biscuit-speaks/src/providers/: README.md  mod.rs
biscuit-speaks/src/voice-control/: README.md
biscuit-terminal/cli/: Cargo.toml  README.md
biscuit-terminal/cli/src/: main.rs
biscuit-terminal/cli/tests/: integration_test.rs
biscuit-terminal/lib/: Cargo.toml  README.md
biscuit-terminal/lib/examples/: escape_analysis.rs  terminal_info.rs
biscuit-terminal/lib/src/: lib.rs  terminal.rs
biscuit-terminal/lib/tests/: integration.rs
biscuit/docs/: inject_enum.md  terminal_color.md  tools.md  underlining_in_terminals.md
biscuit/docs/md/: advanced-links.md  handling-code-block-meta.md  highlighting-the-prose.md  html-rendering.md  line-highlighting.md  markdown-highlighting.md  md-links-to-html.md  mermaid-syntect.md  mermaid-to-image.md  mermaid.md  modern-popovers-in-the-browser.md  pulldown-cmark-events.md  themes.md
biscuit/src/: lib.rs  symbols.rs  tts.rs
biscuit/src/api/: README.md  mod.rs  openai_compat.rs  types.rs
biscuit/src/codegen/: inject.rs  validation.rs
biscuit/src/hashing/: README.md  argon2id.rs  blake3.rs  mod.rs  xx_hash.rs
biscuit/src/interpolate/: html_interpolate.rs  interpolate_regex.rs  md_interpolate.rs  mod.rs  string.rs
biscuit/src/isolate/: README.md  html_isolate.rs  html_scope.rs  md_isolate.rs  types.rs
biscuit/src/markdown/: cleanup.rs  frontmatter.rs  mod.rs
biscuit/src/mermaid/: README.md  mod.rs  render_html.rs  render_terminal.rs  theme.rs
biscuit/src/model/: mod.rs  selection.rs  types.rs
biscuit/src/providers/: base.rs  constants.rs  curated.rs  discovery.rs  mod.rs  retry.rs  types.rs  zai.rs  zenmux.rs
biscuit/src/render/: link.rs  mod.rs
biscuit/src/testing/: mod.rs
biscuit/src/tools/: mod.rs  screen_scrape.rs
biscuit/tests/: markdown_integration.rs  mermaid_integration.rs
biscuit/tests/common/: mod.rs
darkmatter/cli/: Cargo.toml  README.md
darkmatter/cli/src/: lib.rs  main.rs
darkmatter/lib/: Cargo.toml  README.md
darkmatter/lib/src/: lib.rs
lib/: Cargo.toml
lib/output/: deep_dive.md  integration_partners.md  similar_libraries.md  use_cases.md
lib/prompts/: context.md
lib/src/: lib.rs  main.rs
lib/src/providers/: mod.rs
mat/: Cargo.toml  README.md  justfile
mat/src/: main.rs
mat/tests/fixtures/: with-frontmatter.md  without-frontmatter.md
md/: Cargo.toml  README.md
md/src/: main.rs
md/tests/fixtures/: simple.md
playa/cli/: Cargo.toml  README.md
playa/cli/src/: main.rs
playa/lib/: Cargo.toml  README.md
playa/lib/src/: audio.rs  detection.rs  effects.rs  error.rs  lib.rs  playa.rs  playback.rs  player.rs  types.rs
playa/lib/tests/: effects.rs
queue/: Cargo.toml  README.md  justfile
queue/assets/: Insert Modal.monojson  history.monojson  main-window.monojson
queue/cli/: Cargo.toml  README.md
queue/cli/src/: main.rs
queue/cli/tests/: cli_integration.rs
queue/lib/: Cargo.toml  README.md
queue/lib/src/: error.rs  executor.rs  history.rs  lib.rs  parse.rs  terminal.rs  types.rs
queue/lib/tests/: history_integration.rs
queue/src/: main.rs
research/cli/: Cargo.toml  README.md
research/cli/docs/: dependencies.md
research/cli/src/: main.rs
research/lib/: Cargo.toml
research/lib/docs/: dependencies.md
research/lib/examples/: migrate_inventory.rs
research/lib/migrations/: 20260129000001_create_inventory_schema.sql
research/lib/prompts/: additional_question.md  brief.md  changelog.md  context.md  deep_dive.md  integration_partners.md  overview.md  similar_libraries.md  skill.md  use_cases.md
research/lib/src/: lib.rs  main.rs  pull.rs  validation.rs
research/lib/tests/: link_integration_test.rs  list_integration_test.rs  migration_integration_test.rs  skill_validation_test.rs
schematic/: Cargo.toml  README.md  justfile
schematic/define/: Cargo.toml  README.md
schematic/define/src/: auth.rs  lib.rs  prelude.rs  request.rs  response.rs  schema.rs  types.rs  websocket.rs
schematic/definitions/: Cargo.toml  README.md
schematic/definitions/src/: lib.rs  prelude.rs
schematic/docs/: dependencies.md  detailed_analysis.md  elevenlabs-api.md  multipart-form-data.md
schematic/schema/: Cargo.toml  README.md
schematic/schema/src/: anthropic.rs  elevenlabs.rs  emqx.rs  huggingface.rs  huggingfacehub.rs  lib.rs  ollama.rs  ollamanative.rs  ollamaopenai.rs  openai.rs  prelude.rs  shared.rs
schematic/src/: auth.rs  endpoint.rs  lib.rs
shared/: Cargo.toml  brave-search.md  justfile  screen-scape.md
shared/.ai/: README.md
shared/docs/: dependencies.md  generateModelList.md  generate_provider_list.md  getModel.md  get_model.md  how-to-test-the-terminal.md  markdown-struct.md
shared/src/: lib.rs  symbols.rs  tts.rs
shared/tests/: markdown_integration.rs  mermaid_integration.rs
sniff/cli/: Cargo.toml  README.md
sniff/lib/: Cargo.toml  README.md
so-you-say/: Cargo.toml  justfile
so-you-say/src/: main.rs
so-you-say/tests/: cli_test.rs
tree-hugger/cli/: Cargo.toml  README.md
tree-hugger/lib/: Cargo.toml  README.md
(+1112 files in other folders)
