[package]
name = "biscuit-speaks"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "biscuit_speaks"

[features]
default = []
# Enable playa integration for audio playback
# NOTE: This feature will be fully wired in Phase 3
playa = ["dep:playa"]

[dependencies]
# Optional playa integration for audio playback with async support
playa = { path = "../playa/lib", features = ["async"], optional = true }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
sniff-lib = { path = "../sniff/lib" }
tokio = { version = "1", features = ["process", "io-util", "fs"] }
tempfile = "3"
which = "8"
schematic-schema = { path = "../schematic/schema" }
gender_guesser = "0.2"
biscuit-hash = { path = "../biscuit-hash" }

[dev-dependencies]
reqwest = "0.12"
serial_test = "3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
