[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "shared"
path = "src/lib.rs"

[[bin]]
name = "update-provider-models"
path = "src/bin/update-provider-models.rs"

[dependencies]
# Text-to-speech
tts = "0.26.3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Agent tools dependencies
rig-core = "0.28"
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
url = "2.5"
tokio = { version = "1.48", features = ["time", "macros", "rt-multi-thread"] }

# Provider discovery
once_cell = "1.19"
regex = "1.11"

# Code generation (for Phase 2)
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
tempfile = "3.8"
lazy_static = "1.5.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
chrono = "0.4"

# Provider iteration and utilities (Phase 0)
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
futures = "0.3"

# CLI utilities (Phase 4)
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"

# Terminal capabilities (Phase 1)
termini = "1.0"
terminal_size = "0.4"

# Table rendering
comfy-table = "7.1"

# Terminal image rendering
viuer = { version = "0.11", features = ["print-file"] }

# Syntax highlighting (Phase 5)
syntect = "5.2"
two-face = "0.5"

# Markdown parsing and rendering
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22"
markdown = { version = "1.0.0-alpha.22", features = ["serde"] }
html-escape = "0.2"
unicode-width = "0.2.2"
textwrap = "0.16"
supports-hyperlinks = "3.2.0"
similar = { version = "2.6", features = ["inline"] }

# Hashing (for Mermaid diagram caching and markdown TOC)
xxhash-rust = { version = "0.8", features = ["xxh64"] }
blake3 = "1.5"
argon2 = { version = "0.5", features = ["rand"] }
rand = "0.8"
generic-array = "0.14.9"

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
tracing-test = "0.2"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serial_test = "3.0"
insta = "1.41"
pulldown-cmark = "0.13"
unicode-width = "0.2.2"
