[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "shared"
path = "src/lib.rs"

[[bin]]
name = "update-provider-models"
path = "src/bin/update-provider-models.rs"

[dependencies]
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Agent tools dependencies
rig-core = "0.28"
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
url = "2.5"
tokio = { version = "1.48", features = ["time", "macros", "rt-multi-thread"] }

# Provider discovery
once_cell = "1.19"
regex = "1.11"

# Code generation
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
tempfile = "3.8"
lazy_static = "1.5.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
chrono = "0.4"

# Provider iteration and utilities
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
futures = "0.3"

# CLI utilities
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"

# Markdown parsing (for interpolate/isolate modules)
pulldown-cmark = "0.13"

# Hashing
biscuit-hash = { path = "../biscuit-hash" }
blake3 = "1.5"
argon2 = { version = "0.5", features = ["rand"] }
rand = "0.8"
generic-array = "0.14.9"

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
tracing-test = "0.2"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serial_test = "3.0"
insta = "1.41"
