[package]
name = "mat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mat"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
serde_json = "1.0"
atty = "0.2"
open = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
