[package]
name = "md"
version = "0.1.0"
edition = "2024"
license = "Parity-7.0.0"

[[bin]]
name = "md"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
serde_json = "1.0"
serde_yaml = "0.9"
atty = "0.2"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
