[package]
name = "schematic"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
bytes = "1.10"
quick-xml = { version = "0.38", features = ["serde", "serde-types", "serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt", "macros"] }
tracing = "0.1"
url = "2.5"
# OpenAPI generation
utoipa = { version = "5.3", features = ["actix_extras"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
tracing-test = "0.2"
