[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
# Text-to-speech
tts = "0.26.3"

# Tracing
tracing = "0.1"

# Agent tools dependencies
rig-core = "0.27"
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
tokio = { version = "1.48", features = ["time", "macros"] }

# Provider discovery
once_cell = "1.19"

# Code generation (for Phase 2)
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
tempfile = "3.8"
lazy_static = "1.5.0"

# Provider iteration and utilities (Phase 0)
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serial_test = "3.0"
