[package]
name = "so-you-say"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "so-you-say"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
biscuit-speaks = { path = "../biscuit-speaks", features = ["playa"] }
inquire = "0.9"
owo-colors = { version = "4.2", features = ["supports-colors"] }
darkmatter-lib = { path = "../darkmatter-lib" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
