[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
rig-core = { version = "0.28.0", features = ["rayon", "image", "derive", "audio", "rmcp", "pdf"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
