[package]
name = "ai-pipeline"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
lazy_static = "1.5.0"
rig-core = { version = "0.28.0", features = ["rayon", "image", "derive", "audio", "rmcp", "pdf"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3.31"
model_id = { path = "../../model_id" }
url= "2.5"
