[package]
name = "biscuit-hash-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bh"
path = "src/main.rs"

[dependencies]
biscuit-hash = { path = "../lib", features = ["xx_hash", "blake3", "argon2id"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
