[package]
name = "biscuit-terminal-cli"
description = "CLI for terminal utilities including syntax highlighting and themes"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/yankeeinlondon/dockhand"

[[bin]]
name = "bt"
path = "src/main.rs"

[dependencies]
biscuit-terminal = { path = "../lib" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
