[package]
name = "biscuit-terminal"
description = "A set of utilities for making working in the terminal more rewarding"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/yankeeinlondon/dockhand"
keywords = ["terminal", "syntax-highlighting", "themes"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "biscuit-terminal"
path = "src/lib.rs"


[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
