[package]
name = "darkmatter-cli"
description = "A themed markdown renderer for both console (escape-codes) and the browser (HTML)."
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/yankeeinlondon/dockhand"
keywords = ["markdown", "terminal", "cli", "syntax-highlighting", "themes"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "darkmatter_cli"
path = "src/lib.rs"

[[bin]]
name = "md"
path = "src/main.rs"

[dependencies]
darkmatter-lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
color-eyre = "0.6"
serde_json = "1.0"
serde_yaml = "0.9"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
