[package]
name = "playa-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "playa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
playa = { path = "../lib", features = ["sound-effects"] }
darkmatter-lib = { path = "../../darkmatter/lib" }
sniff-lib = { path = "../../sniff/lib" }
