[package]
name = "research-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "research"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
research-lib = { path = "../lib" }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tts = "0.26.3"
