[package]
name = "research-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "research_lib"
path = "src/lib.rs"

[[bin]]
name = "research-dev"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenvy = "0.15.7"
futures = "0.3"
globset = "0.4"
inquire = "0.9"
owo-colors = "4"
pulldown-cmark = "0.13.0"
termbg = "0.6"
pulldown-cmark-to-cmark = "22.0.0"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../../shared" }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
proptest = "1"
tempfile = "3.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
wiremock = "0.6"
