[package]
name = "research-lib"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "research_lib"
path = "src/lib.rs"

[[bin]]
name = "research-dev"
path = "src/main.rs"

[[bin]]
name = "migrate_json_to_sqlite"
path = "src/bin/migrate_json_to_sqlite.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenvy = "0.15.7"
futures = "0.3"
globset = "0.4"
inquire = "0.9"
owo-colors = "4"
pulldown-cmark = "0.13.0"
termbg = "0.6"
pulldown-cmark-to-cmark = "22.0.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.29.0"
ai-pipeline = { path = "../../ai-pipeline/lib" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros"] }
serde_yaml = "0.9"
# shared dependency removed - tools migrated to ai-pipeline
darkmatter-lib = { path = "../../darkmatter/lib" }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
biscuit-speaks = { path = "../../biscuit-speaks" }
sniff-lib = { path = "../../sniff/lib"}

[dev-dependencies]
proptest = "1"
serial_test = "3"
tempfile = "3.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
wiremock = "0.6"
