[package]
name = "schematic-define"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "REST API definition types for schematic code generation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
