[package]
name = "sniff-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "sniff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
sniff-lib = { path = "../lib" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
