[package]
name = "sniff-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "sniff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
darkmatter-lib = { path = "../../darkmatter/lib" }
sniff-lib = { path = "../lib", features = ["network"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
