[package]
name = "sniff-lib"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ec4rs = "1"
getifaddrs = "0.6.0"
git2 = "0.20.3"
hyperpolyglot = "0.1.7"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.37.2"
thiserror = "2.0"
toml = "0.9"
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"

[dev-dependencies]
tempfile = "3"
