[package]
name = "sniff-lib"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ec4rs = "1"
futures = { version = "0.3", optional = true }
getifaddrs = "0.6.0"
git2 = "0.20.3"
hyperpolyglot = "0.1.7"
ignore = "0.4"
rayon = "1.11.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.37.2"
thiserror = "2.0"
tokio = { version = "1", features = ["rt"], optional = true }
toml = "0.9"
walkdir = "2.5"
which = { version = "8.0.0", features = ["regex", "tracing"] }

[features]
default = []
network = ["dep:reqwest", "dep:tokio", "dep:futures", "reqwest/rustls-tls"]

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
