[package]
name = "tree-hugger-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hug"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
ignore = "0.4"
owo-colors = { version = "4.2", features = ["supports-colors"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-hugger-lib = { path = "../lib" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
