[package]
name = "tree-hugger-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
biscuit-hash = { path = "../../biscuit-hash" }
ignore = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0"
tree-sitter = "0.26.3"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-lua = "0.4.1"
tree-sitter-perl = "1.1.2"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.24.0"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-zsh = "0.52.0"

[dev-dependencies]
tempfile = "3.15"
